--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,18 +1,17 @@
 /* all items */
 * {
-    border-style: none;
-    border-width: 1px;
+    outline: 5px solid; 
     font-family: "garamond";
 }
 
 /* webpage */
 html {
-    border-color: red;
+    outline-color: red;
 }
 
 /* webbody */
 body {
-    border-color: orange;
+    outline-color: orange;
 }
 
 /* curr page highlight */
@@ -28,7 +27,7 @@ a {
 
 /* navigation top */
 #header { 
-    border-color: yellow;
+    outline-color: yellow;
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
@@ -43,7 +42,7 @@ a {
 }
 
 #header h1 {
-    border-color: green;
+    outline-color: green;
     font-size: 30px;
 
     height: 50%;
@@ -57,7 +56,7 @@ a {
 }
 
 #navcon {
-    border-color: teal;
+    outline-color: teal;
 
     width: 35%;
     height: 50%;
@@ -68,7 +67,7 @@ a {
 }
 
 #primarynav {
-    border-color: blue;
+    outline-color: blue;
 
     height: 100%; 
 
@@ -83,7 +82,7 @@ a {
 }
 
 #header li {
-    border-color: purple;
+    outline-color: purple;
     
     display: inline;
     list-style: none;
@@ -104,14 +103,14 @@ a {
 }
 
 #aboutcon {
-    border-color: yellow;
+    outline-color: yellow;
 
     width: 100%;
     height: 70vh;
 }
 
 #aboutcon h1 {
-    border-color: red; 
+    outline-color: red; 
     background-color: rgb(216, 224, 237);
     border-radius: 10px;
 
@@ -123,7 +122,6 @@ a {
     margin-left: 17.5%; 
     margin-right: 0%;
     margin-top: 2%;
-    margin-bottom: 2%; 
     padding: 0.25%;
     
     text-align: center;
@@ -132,17 +130,17 @@ a {
 }
 
 #aboutcon2 {
-    border-color: green;
+    outline-color: green;
 
     height: 82%; 
-    margin-bottom: 0%; 
+    /* margin-bottom: 0%;  */
     
     display: flex;  
     justify-content: center;
 }
 
 #aboutcon2 img {
-    border-color: red; 
+    outline-color: red; 
     margin-left: 0%; 
     margin-right: 4.5%; 
     
@@ -151,7 +149,7 @@ a {
 }
 
 #aboutcon3 {
-    border-color: teal;
+    outline-color: teal;
 
     width: 40%; 
     height: 100%;
@@ -161,7 +159,7 @@ a {
 }
 
 #aboutcon3 h2 {
-    border-color: red;
+    outline-color: red;
 
     width: 20%; 
     height: 5%;
@@ -171,16 +169,16 @@ a {
 }
 
 #aboutcon3 p {
-    border-color: red;
+    outline-color: red;
 
     width: 100%; 
     margin-top: 0%;
 }
 
 #aboutlist {
-    border-color: blue; 
+    outline-color: blue; 
 
-    width: 93%;
+    width: 93.5%;
     height: 15%;
 
     text-align: center;
@@ -189,21 +187,21 @@ a {
 }
 
 #aboutlist li {
-    border-color: red;
+    outline-color: red;
 
     width: 15%;
     height: 31%
 }
-
+/* 
 #interestcon {
-    border-color: yellow;
+    outline-color: yellow;
     height: 50%;
 }
 
 #interestcon h1 {
-    border-color: red;
+    outline-color: red;
     background-color: rgb(216, 224, 237);
-    border-radius: 10px;
+    outline-radius: 10px;
 
     font-size: 30px;
 
@@ -214,7 +212,7 @@ a {
     margin-right: 0%; 
     margin-top: 2%;
     margin-bottom: 2%; 
-    padding: 0.25%;
+    padding: 0.25%; 
 
     text-align: center;
     align-items: center;
@@ -223,19 +221,19 @@ a {
 
 #interestcon2 {
 
-    border-color: green;
-    height: 82%;
+    outline-color: green;
+    height: 100%;
 
     display: flex;
     justify-content: center;
 }
 
 #interestlist {
-    border-color: teal; 
+    outline-color: teal; 
     width: 63%;
     height: 100%;
 
-    display: flex; 
+    display: inline-flex; 
     list-style: none; 
 
     align-items: center; 
@@ -244,19 +242,19 @@ a {
 }
 
 #interestlist li {
-    border-color: red;
+    outline-color: red;
 
     background-color: rgb(216, 224, 237);
-    border-radius: 10px; 
+    outline-radius: 10px; 
 
-    height: 100%;
+    height: 5%;
     width: 25%;
 
     font-size: 20px;
 }
 
 #aimg1 {
-    width: 45%; 
+    width: 50%; 
     height: 30%;
 
     margin-right: 0.5vw;
@@ -281,21 +279,19 @@ a {
     height: 50%;
 
     margin-right: 0%;
-}
+} */
 
 #footer {
-    border-color: yellow;
-
+    outline-color: yellow;
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
-    height: 7vh;
+    height: 5%;
+    margin-bottom: 0%;
 
     display: flex;
     list-style: none;
 
     align-items: center;
     justify-content: center;
-
-    margin-bottom: 0px;
 }
