--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,17 +1,21 @@
 /* all items */
 * {
-    outline: 5px solid; 
+    outline: 2px solid; 
     font-family: "garamond";
 }
 
 /* webpage */
 html {
     outline-color: red;
+    height: 100vh; 
+    width: 100vw; 
 }
 
 /* webbody */
 body {
     outline-color: orange;
+    height: 100%; 
+    width: 100%; 
 }
 
 /* curr page highlight */
@@ -31,8 +35,8 @@ a {
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
-    height: 5%; 
-    margin-bottom: 5%; 
+    height: 8%; 
+    margin-bottom: 3%; 
 
     display: flex;
     list-style: none;
@@ -58,6 +62,8 @@ a {
 #navcon {
     outline-color: teal;
 
+    display: flex; 
+
     width: 35%;
     height: 50%;
 
@@ -69,14 +75,8 @@ a {
 #primarynav {
     outline-color: blue;
 
-    height: 100%; 
+    width: 100%;
 
-    margin-top: 0%;
-    margin-bottom: 0%;
-    margin-left: 0%;
-    margin-right: 0%; 
-
-    text-align: center;
     align-items: center;
     justify-content: center;
 }
@@ -87,10 +87,7 @@ a {
     display: inline;
     list-style: none;
 
-    margin-top: 0%;
-    margin-bottom: 0%;
     margin-left: 2%; 
-    margin-right: 0%; 
 
     padding-left: 1%;
     padding-right: 1%;
@@ -102,11 +99,20 @@ a {
     justify-content: center;
 }
 
+#header a {
+    justify-content: center;
+    text-align: center; 
+}
+
 #aboutcon {
     outline-color: yellow;
 
+    display: grid;
+
     width: 100%;
     height: 70vh;
+
+    margin-bottom: 0%;
 }
 
 #aboutcon h1 {
@@ -115,14 +121,14 @@ a {
     border-radius: 10px;
 
     font-size: 30px;
+    display: flex; 
     
-    width: 9.5%;
-    height: 5%;
+    width: 9%;
+    height: 40%;
 
     margin-left: 17.5%; 
-    margin-right: 0%;
     margin-top: 2%;
-    padding: 0.25%;
+    margin-bottom: 2%;
     
     text-align: center;
     align-items: center;
@@ -132,8 +138,9 @@ a {
 #aboutcon2 {
     outline-color: green;
 
-    height: 82%; 
-    /* margin-bottom: 0%;  */
+    display: flex; 
+
+    height: 90%; 
     
     display: flex;  
     justify-content: center;
@@ -145,7 +152,7 @@ a {
     margin-right: 4.5%; 
     
     height: 100%;
-    width: 21%;
+    width: 20%;
 }
 
 #aboutcon3 {
@@ -286,7 +293,8 @@ a {
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
-    height: 5%;
+    height: 8%;
+    margin-top: 3%;
     margin-bottom: 0%;
 
     display: flex;
