--- a/css/resume.css
+++ b/css/resume.css
@@ -1,20 +1,21 @@
 /* all items */
 * {
-    outline: 2px solid;
+    outline: 1px solid;
     font-family: "garamond";
 }
 
-/* constants */
-:root {
-    --header-height: 7vh;
-}
-
+/* webpage */
 html {
     outline-color: red;
+    height: 100vh;
+    width: 100vw;
 }
 
+/* webbody */
 body {
     outline-color: orange;
+    height: 100%;
+    width: 100%;
 }
 
 /* curr page highlight */
@@ -28,12 +29,14 @@ a {
     color: black;
 }
 
+/* navigation top */
 #header {
     outline-color: yellow;
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
-    height: var(--header-height);
+    height: 8%;
+    margin-bottom: 4%;
 
     display: flex;
     list-style: none;
@@ -44,25 +47,38 @@ a {
 
 #header h1 {
     outline-color: green;
-
     font-size: 30px;
-    height: auto;
-    width: auto;
 
-    margin-right: 20vw;
+    height: 50%;
+    width: 10%;
+
+    margin-right: 20%;
 
     text-align: center;
     align-items: center;
+    justify-content: center;
 }
 
 #navcon {
     outline-color: teal;
+
+    display: flex;
+
+    width: 35%;
+    height: 50%;
+
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 #primarynav {
     outline-color: blue;
-    padding: 8px;
-    margin: 0px;
+
+    width: 100%;
+
+    align-items: center;
+    justify-content: center;
 }
 
 #header li {
@@ -71,187 +87,148 @@ a {
     display: inline;
     list-style: none;
 
-    padding-left: 1vw;
-    padding-right: 1vh;
+    margin-left: 2%;
+
+    padding-left: 1%;
+    padding-right: 1%;
 
     font-size: 23.5px;
+
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+#header a {
+    justify-content: center;
+    text-align: center;
 }
 
 #summarycon {
     outline-color: yellow;
 
-    height: 30vh;
+    display: inline-block;
 
-    margin: auto;
-    margin-top: 10vh;
+    width: 100%;
+    height: 40vh;
+
+    margin-bottom: 0%;
 }
 
 #summarycon h1 {
     outline-color: red;
-
     background-color: rgb(216, 224, 237);
     border-radius: 10px;
 
-    width: 8.5vw;
-    height: 4vh;
-    padding: 5px;
+    font-size: 30px;
+    display: flex;
+
+    width: 10%;
+    height: 10%;
+
+    margin-left: 17.5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+
     text-align: center;
-
-    margin-left: 17vw;
-    margin-bottom: 3.5vh;
-}
-
-#summarycon1 {
-    outline-color: green;
-
-    height: 20vh;
-    margin-top: 2vh;
-
-    display: flex;  
+    align-items: center;
     justify-content: center;
 }
 
-#summarycon p {
-    height: 1rem; 
-}
-#aboutcon3 {
-    outline-color: teal;
+#summarycon2 {
+    outline-color: green;
 
-    width: 45vw;
-    height: 53vh;
+    display: flex;
+    height: 60%;
 }
 
-#aboutcon3 h2 {
-    outline-color: red;
+#summarycon2 p {
+    outline-color: red; 
 
-    width: 8vw;
-    height: 3vh;
-    margin-left: 3vw;
-    margin-top: 0vh;
+    width: 30%; 
+    height: 100%;
+    
+    margin-top: 0%;
+    margin-left: 17.5%; 
 }
 
-#aboutcon3 p {
-    outline-color: red;
+#summarylist {
+    outline-color: blue; 
 
-    width: 39vw;
+    width: 20%; 
+    height: 100%; 
 
-    margin-left: 3vw;
-    margin-top: 0vh;
+    margin-top: 0%; 
+    margin-left: 5%;
 }
 
-#aboutlist {
+#summarylist li {
+    outline-color: purple; 
+
+    margin-left: 0%; 
+
+    list-style: none; 
+}
+
+#edcon {
     outline-color: blue;
 
-    width: 36.5vw;
-    height: 8.5vh;
+    display: inline-block;
 
-    margin-top: 2vh;
-    margin-left: 3vw;
+    width: 100%;
+    height: 30vh;
+
+    margin-top: 3%;
 }
 
-#aboutlist li {
+#edcon h1 {
     outline-color: red;
-
-    width: 15vw;
-}
-
-#interestcon {
-    outline-color: yellow;
-    margin-top: 2vh;
-    height: 40.5vh;
-}
-
-#interestcon h1 {
-    outline-color: red;
-
-    border-radius: 10px;
     background-color: rgb(216, 224, 237);
+    border-radius: 10px;
 
-    width: 8.5vw;
-    height: 4vh;
-    padding: 5px;
-    text-align: center;
-
-    margin-left: 17vw;
-}
-
-#interestcon2 {
-    outline-color: green;
-    width: 97.5vw;
-    height: 20vh;
-    margin-top: 3.75vh;
-}
-
-#interestlist {
-    outline-color: teal;
-    width: 94.5vw;
-    height: 20vh;
-
+    font-size: 30px;
     display: flex;
-    list-style: none;
 
+    width: 10%;
+    height: 10%;
+
+    margin-left: 17.5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+
+    text-align: center;
     align-items: center;
     justify-content: center;
-
-    margin: auto;
 }
 
-#interestlist li {
-    outline-color: red;
+#edcon2 {
+    outline-color: green;
 
-    background-color: rgb(216, 224, 237);
-    border-radius: 10px;
+    height: 60%;
+    width: 100%; 
 
-    display: flex;
-    align-items: center;
-
-    font-size: 20px;
-
-    margin-right: 2.75vw;
-    padding: 2.6vw;
+    display: flex; 
 }
 
-#aimg1 {
-    width: 5vw;
-    height: 10vh;
+#edcon2 p {
+    outline-color: red; 
 
-    margin-right: 0.5vw;
-}
-
-#aimg2 {
-    width: 5vw;
-    height: 10.5vh;
-
-    margin-right: 0vw;
-}
-
-#aimg3 {
-    width: 5vw;
-    height: 10vh;
-
-    margin-right: 0vw;
-}
-
-#aimg4 {
-    width: 6vw;
-    height: 10.5vh;
-
-    margin-right: 0vw;
+    width: 15%; 
+    margin-left: 17.5%; 
 }
 
 #footer {
     outline-color: yellow;
-
     border-radius: 10px;
     background-color: rgb(216, 216, 237);
 
-    height: 7vh;
+    height: 8%;
+    margin-top: 4%;
+    margin-bottom: 0%;
 
     display: flex;
     list-style: none;
 
     align-items: center;
     justify-content: center;
-
-    margin-bottom: 0px;
 }
