--- a/css/resume.css
+++ b/css/resume.css
@@ -145,29 +145,32 @@ a {
 #summarycon2 p {
     outline-color: red; 
 
-    width: 30%; 
+    width: 20%; 
     height: 100%;
     
     margin-top: 0%;
     margin-left: 17.5%; 
 }
 
+#summarycon2 img {
+    width: auto; 
+    height: auto;
+}
+
 #summarylist {
     outline-color: blue; 
 
-    width: 20%; 
+    width: 17%; 
     height: 100%; 
 
     margin-top: 0%; 
-    margin-left: 5%;
+    justify-content: center;
+    align-items: center;
 }
 
 #summarylist li {
     outline-color: purple; 
-
-    margin-left: 0%; 
-
-    list-style: none; 
+    width: 60%; 
 }
 
 #edcon {
@@ -213,7 +216,10 @@ a {
 #edcon2 p {
     outline-color: red; 
 
-    width: 15%; 
+    width: 20%; 
+    height: 100%;
+
+    margin-top: 0%; 
     margin-left: 17.5%; 
 }
 
