--- a/css/resume.css
+++ b/css/resume.css
@@ -1,21 +1,31 @@
 /* all items */
 * {
-    outline: 1px solid;
+    outline: 2px solid;
     font-family: "garamond";
 }
 
 /* webpage */
 html {
     outline-color: red;
+    outline: 0px; 
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
 }
 
 /* webbody */
 body {
     outline-color: orange;
+    outline: 0px; 
     height: 100%;
     width: 100%;
+
+    margin: 0;
+    height: 100vh;
+    background-image: url('/images/bg.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 /* curr page highlight */
@@ -32,7 +42,7 @@ a {
 /* navigation top */
 #header {
     outline-color: yellow;
-    border-radius: 10px;
+    border-radius: 0px;
     background-color: rgb(216, 216, 237);
 
     height: 8%;
@@ -106,11 +116,12 @@ a {
 
 #summarycon {
     outline-color: yellow;
+    outline: 5px solid yellow; 
 
     display: inline-block;
 
     width: 100%;
-    height: 40vh;
+    height: 35vh;
 
     margin-bottom: 0%;
 }
@@ -123,8 +134,8 @@ a {
     font-size: 30px;
     display: flex;
 
-    width: 10%;
-    height: 10%;
+    width: 12%;
+    height: 4vh;
 
     margin-left: 17.5%;
     margin-top: 2%;
@@ -135,53 +146,89 @@ a {
     justify-content: center;
 }
 
+#summarycon h3 {
+    outline-color: red;
+
+    width: 50%;
+    height: 7%;
+
+    margin-left: 17.5%;
+    margin-top: 0%;
+    margin-bottom: 2%; 
+
+    align-content: center;
+}
+
 #summarycon2 {
     outline-color: green;
 
+    height: 49%;
+    width: 100%;
+
+    margin-top: 0%; 
+    margin-bottom: 0%; 
+
     display: flex;
-    height: 60%;
+    flex-flow: row wrap;
+}
+
+#summarycon2 #first {
+    margin-left: 17.5%;
+}
+
+#summarycon2 #last {
+    margin-right: 17.5%;
+}
+
+#summarycon2 #topr {
+    margin-top: 0%;
 }
 
 #summarycon2 p {
-    outline-color: red; 
+    outline-color: red;
+    background-color: rgb(216, 224, 237);
+    border-radius: 10px;
 
-    width: 20%; 
+    width: 11.4%;
     height: 100%;
-    
-    margin-top: 0%;
-    margin-left: 17.5%; 
-}
 
-#summarycon2 img {
-    width: auto; 
-    height: auto;
+    margin-left: 2%;
+    margin-top: 0%;
+
+    text-align: center;
+    align-content: center;
 }
 
 #summarylist {
     outline-color: blue; 
 
-    width: 17%; 
+    width: 20%; 
     height: 100%; 
 
     margin-top: 0%; 
+    margin-left: 10%; 
+    margin-right: 17.5%; 
+
     justify-content: center;
     align-items: center;
 }
 
 #summarylist li {
     outline-color: purple; 
-    width: 60%; 
+    width: 80%; 
 }
 
 #edcon {
-    outline-color: blue;
+    outline-color: yellow;
+    outline: 5px solid yellow; 
 
     display: inline-block;
 
     width: 100%;
     height: 30vh;
 
-    margin-top: 3%;
+    margin-top: 5.25%;
+    margin-bottom: 0%; 
 }
 
 #edcon h1 {
@@ -193,15 +240,11 @@ a {
     display: flex;
 
     width: 10%;
-    height: 10%;
+    height: 4vh;
 
     margin-left: 17.5%;
     margin-top: 2%;
     margin-bottom: 2%;
-
-    text-align: center;
-    align-items: center;
-    justify-content: center;
 }
 
 #edcon2 {
@@ -211,16 +254,145 @@ a {
     width: 100%; 
 
     display: flex; 
+    flex-flow: column wrap;
+}
+
+#edcon2 #first {
+    outline-color: blue;
+
+    width: 12%;
+    height: 100%;
+
+    margin-top: 0%;
+    margin-bottom: 0%; 
+    margin-left: 17.5%;
+    margin-right: 0%; 
+}
+
+#edcon2 #last {
+    outline-color: teal;
+
+    width: 10.5%;
+    height: 100%;
+
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-left: 0%;
+    margin-right: 17.5%;
+}
+
+#edcon2 #arrow {
+    outline-color: purple;
+    background-color: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+
+    width: 7.1%;
+    height: 100%;
+
+    margin-top: 0%;
+    margin-bottom: 0%; 
+    margin-left: 0%;
+    margin-right: 0%; 
 }
 
 #edcon2 p {
-    outline-color: red; 
+    outline-color: red;
+    background-color: rgb(216, 224, 237);
+    border-radius: 10px;
 
-    width: 20%; 
+    width: 10.5%;
     height: 100%;
 
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-left: 0%;
+    margin-right: 0%; 
+
+    text-align: center;
+    align-content: center;
+}
+
+#achcon {
+    outline-color: yellow;
+    outline: 5px solid yellow;
+
+    display: inline-block;
+
+    width: 100%;
+    height: 45vh;
+
+    margin-top: 4%;
+}
+
+#achcon h1 {
+    outline-color: red;
+    background-color: rgb(216, 224, 237);
+    border-radius: 10px;
+
+    font-size: 30px;
+    display: flex;
+
+    width: 13.5%;
+    height: 4vh;
+
+    margin-left: 17.5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+#achcon h3 {
+    outline-color: red;
+
+    width: 50%;
+    height: 6%;
+
+    margin-left: 17.5%;
+    margin-top: 0%;
+    margin-bottom: 2%;
+
+    align-content: center;
+    justify-content: center;
+}
+
+#achcon2 {
+    outline-color: green;
+
+    height: 60%;
+    width: 100%;
+
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#achcon2 #first {
+    margin-left: 17.5%;
+}
+
+#achcon2 #last {
+    margin-right: 17.5%;
+}
+
+#achcon2 #topr {
     margin-top: 0%; 
-    margin-left: 17.5%; 
+}
+
+#achcon2 #bottomr {
+    margin-bottom: 0%;
+}
+
+#achcon2 p {
+    outline-color: red;
+    background-color: rgb(216, 224, 237);
+    border-radius: 10px;
+
+    width: 10%;
+    height: 46%;
+
+    margin-left: 3.75%;
+    margin-top: 0%;
+
+    text-align: center; 
+    align-content: center;
 }
 
 #footer {
