new bg, hover effects, image sorting

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -391,3 +391,12 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+.tester {
+    transition: all 0.5s ease;
+}
+
+.tester:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(175, 182, 231, 0.5);
+}
