--- a/css/resume.css
+++ b/css/resume.css
@@ -8,8 +8,10 @@
 html {
     outline-color: red;
     outline: 0px; 
-    height: 100vh;
+    height: 98vh;
     width: 98vw;
+    margin-left: auto; 
+    margin-right: auto;
 }
 
 /* webbody */
@@ -21,7 +23,7 @@ body {
 
     margin: 0;
     height: 100vh;
-    background-image: url('/images/bg.jpeg');
+    background-image: url('/images/bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -45,14 +47,13 @@ a {
     border-radius: 0px;
     background-color: rgb(216, 216, 237);
 
-    height: 8%;
+    height: 8vh;
     margin-bottom: 4%;
 
     display: flex;
     list-style: none;
 
     align-items: center;
-    justify-content: center;
 }
 
 #header h1 {
@@ -62,11 +63,10 @@ a {
     height: 50%;
     width: 10%;
 
-    margin-right: 20%;
+    margin-left: 19%;
 
     text-align: center;
-    align-items: center;
-    justify-content: center;
+    align-content: center;
 }
 
 #navcon {
@@ -76,6 +76,9 @@ a {
 
     width: 35%;
     height: 50%;
+    
+    margin-left: auto; 
+    margin-right: 14%; 
 
     text-align: center;
     align-items: center;
@@ -137,7 +140,7 @@ a {
     width: 12%;
     height: 4vh;
 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-top: 2%;
     margin-bottom: 2%;
 
@@ -152,7 +155,7 @@ a {
     width: 50%;
     height: 7%;
 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-top: 0%;
     margin-bottom: 2%; 
 
@@ -173,11 +176,11 @@ a {
 }
 
 #summarycon2 #first {
-    margin-left: 17.5%;
+    margin-left: 19%;
 }
 
 #summarycon2 #last {
-    margin-right: 17.5%;
+    margin-right: 16%;
 }
 
 #summarycon2 #topr {
@@ -207,7 +210,7 @@ a {
 
     margin-top: 0%; 
     margin-left: 10%; 
-    margin-right: 17.5%; 
+    margin-right: 19%; 
 
     justify-content: center;
     align-items: center;
@@ -242,7 +245,7 @@ a {
     width: 10%;
     height: 4vh;
 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-top: 2%;
     margin-bottom: 2%;
 }
@@ -265,7 +268,7 @@ a {
 
     margin-top: 0%;
     margin-bottom: 0%; 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-right: 0%; 
 }
 
@@ -278,7 +281,7 @@ a {
     margin-top: 0%;
     margin-bottom: 0%;
     margin-left: 0%;
-    margin-right: 17.5%;
+    margin-right: 16%;
 }
 
 #edcon2 #arrow {
@@ -319,7 +322,7 @@ a {
     display: inline-block;
 
     width: 100%;
-    height: 45vh;
+    height: 55vh;
 
     margin-top: 4%;
 }
@@ -332,10 +335,10 @@ a {
     font-size: 30px;
     display: flex;
 
-    width: 13.5%;
+    width: 7%;
     height: 4vh;
 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-top: 2%;
     margin-bottom: 2%;
 }
@@ -346,7 +349,7 @@ a {
     width: 50%;
     height: 6%;
 
-    margin-left: 17.5%;
+    margin-left: 19%;
     margin-top: 0%;
     margin-bottom: 2%;
 
@@ -357,19 +360,21 @@ a {
 #achcon2 {
     outline-color: green;
 
-    height: 60%;
+    height: 58%;
     width: 100%;
 
     display: flex;
     flex-flow: row wrap;
+
+    margin-bottom: 0%; 
 }
 
 #achcon2 #first {
-    margin-left: 17.5%;
+    margin-left: 19%;
 }
 
 #achcon2 #last {
-    margin-right: 17.5%;
+    margin-right: 16%;
 }
 
 #achcon2 #topr {
@@ -397,16 +402,57 @@ a {
 
 #footer {
     outline-color: yellow;
-    border-radius: 10px;
+    border-radius: 0px;
     background-color: rgb(216, 216, 237);
 
-    height: 8%;
+    height: 8vh;
+    margin-left: 0%; 
     margin-top: 4%;
     margin-bottom: 0%;
 
     display: flex;
     list-style: none;
 
-    align-items: center;
+    align-content: center;
     justify-content: center;
+}
+
+.tester {
+    transition: all 0.5s ease;
+}
+
+.tester:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(175, 182, 231, 0.5);
+}
+
+.hover-underline {
+    position: relative;
+}
+
+.hover-underline::after,
+.hover-underline::before {
+    transition: transform 0.4s ease-out; 
+    background: linear-gradient(to right, #999dd3, #aec4f1); 
+    
+    content: '';
+    position: absolute;
+
+    width: 100%;
+    height: 2px;
+    left: 0;
+    bottom: -5px;
+
+    transform: scaleX(0);
+    transform-origin: right;
+}
+
+.hover-underline::before {
+    top: -5px;
+    transform-origin: left;
+}
+
+.hover-underline:hover::after,
+.hover-underline:hover::before {
+    transform: scaleX(1);
 }
