--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,6 @@
 /* all items */
 * {
-    outline: 2px solid;
+    /* outline: 2px solid; */
     font-family: "century gothic", "garamond";
 }
 
@@ -118,7 +118,6 @@ a {
 
 #summarycon {
     outline-color: yellow;
-    outline: 5px solid yellow; 
 
     display: inline-block;
 
@@ -222,7 +221,6 @@ a {
 
 #edcon {
     outline-color: yellow;
-    outline: 5px solid yellow; 
 
     display: inline-block;
 
@@ -316,7 +314,6 @@ a {
 
 #achcon {
     outline-color: yellow;
-    outline: 5px solid yellow;
 
     display: inline-block;
 
