--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -153,7 +153,7 @@ a {
 
     display: flex; 
 
-    margin-top: 0%; 
+    margin-top: 2%; 
     height: 90%; 
     
     display: flex;  
@@ -182,11 +182,23 @@ a {
 #aboutcon3 h2 {
     outline-color: red;
 
-    width: 30%; 
+    width: 50%; 
+    height: 5%;
+
+    font-size: 50px;
+
+    margin-top: 0%;
+    margin-bottom: 8%
+}
+
+#aboutcon3 h3 {
+    outline-color: red;
+
+    width: 100%;
     height: 5%;
 
     margin-top: 0%;
-    margin-bottom: 4%
+    margin-bottom: 3%
 }
 
 #aboutcon3 p {
@@ -201,6 +213,7 @@ a {
 
     width: 93.5%;
     height: 15%;
+    margin-top: 4%; 
 
     align-items: center;
     justify-content: center;
@@ -221,6 +234,7 @@ a {
     width: 100%;
     height: 35vh;
 
+    margin-top: 5%; 
     margin-bottom: 0%;
 }
 
