--- a/css/index.css
+++ b/css/index.css
@@ -40,6 +40,32 @@ li {
     background-color: rgb(216, 216, 237); 
 }
 
+/* loader ideas */
+.loader {
+    width: 120px;
+    height: 22px;
+    border-radius: 20px;
+    color: #514b82;
+    border: 2px solid;
+    position: relative;
+}
+
+.loader::before {
+    content: "";
+    position: absolute;
+    margin: 2px;
+    inset: 0 100% 0 0;
+    border-radius: inherit;
+    background: currentColor;
+    animation: l6 2s infinite;
+}
+
+@keyframes l6 {
+    100% {
+        inset: 0
+    }
+}
+
 #maincon {
     border-color: yellow;
     
